@@ -25,8 +25,6 @@
  *  SUCH DAMAGE.
  *   
  *
- *  $Id: machine_mvme88k.c,v 1.11.2.1 2008-01-18 19:12:33 debug Exp $
- *
  *  COMMENT: MVME88K machines (MVME187)
  *
  *  This is for experiments with OpenBSD/mvme88k.
@@ -92,8 +90,9 @@ MACHINE_SETUP(mvme88k)
 		device_add(machine, tmpstr);
 
 		/*  Cirrus Logic serial console at 0xfff45000:  */
-		snprintf(tmpstr, sizeof(tmpstr),
-		    "clmpcc addr=0x%x name2=cl0", 0xfff45000);
+		snprintf(tmpstr, sizeof(tmpstr), "clmpcc irq=%s.cpu[%i].pcc2 "
+		    "addr=0x%08x name2=cl0", machine->path,
+		    machine->bootstrap_cpu, 0xfff45000);
 		machine->main_console_handle =
 		    (size_t) device_add(machine, tmpstr);
 
